Updating the sorting functionality

--- a/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
+++ b/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
@@ -70,7 +70,11 @@
     <Compile Include="infrastructure\searching\OrCriteria.cs" />
     <Compile Include="infrastructure\searching\PropertyCriteria.cs" />
     <Compile Include="infrastructure\searching\Where.cs" />
+    <Compile Include="infrastructure\sorting\PropertyComparer.cs" />
     <Compile Include="infrastructure\sorting\ChainedComparer.cs" />
+    <Compile Include="infrastructure\sorting\ComparerFactory.cs" />
+    <Compile Include="infrastructure\sorting\Order.cs" />
+    <Compile Include="infrastructure\sorting\ReverseComparer.cs" />
     <Compile Include="ranges\InclusiveRange.cs" />
     <Compile Include="ranges\Range.cs" />
     <Compile Include="ranges\RangeWithNoUpperBound.cs" />
